--- a/epub.yaml
+++ b/epub.yaml
@@ -1,7 +1,7 @@
 ---
 title: "xelatex指南"
-date: "2019-12-05"
-subject: [技术,  unix]
+date: "2020-4-10"
+subject: [技术,  latex]
 lang: zh
 css: epub.css
 cover-image: book_cover.png
