--- a/配置参考/epub.yaml
+++ b/配置参考/epub.yaml
@@ -1,7 +1,8 @@
 ---
 title: "xelatex指南"
+author: "wander"
+creator: "wander"
 date: "2024-2-26"
-subject: [技术,  latex]
-lang: zh
+lang: zh-hans
 css: epub.css
 cover-image: book_cover.png
