--- a/配置参考/epub/epub.yaml
+++ b/配置参考/epub/epub.yaml
@@ -1,7 +1,7 @@
 ---
 title: "xelatex指南"
-author: "wander"
-creator: "wander"
+author: "Wander"
+creator: "Wander"
 date: "2024-2-26"
 lang: zh-hans
 css: epub.css
